2023-06-16  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-proofsort: Rename from 'proofsort'.

2023-06-14  Andreas Scherer  <https://ascherer.github.io>

	* ctproofmac.tex,
	* cttwinxmac.tex,
	* ctwimac.tex,
	* texinputs/pdfctwimac.tex: Touch up for CWEB 4.9.
	* ctwill-hint.ch: Revert two changes for HiTeX.
	* texinputs/pdfctproofmac.tex: New macros for HiTeX.

2023-06-12  Andreas Scherer  <https://ascherer.github.io>

	* proofsort: Sort mini-indexes in CTWILL output.

2023-05-26  Andreas Scherer  <https://ascherer.github.io>

	* examples/wordtest.w: Fix page number for Aragon and Seidel.

2023-05-24  Andreas Scherer  <https://ascherer.github.io>

	* refsort.ch: Make room for larger index entries.

2023-05-19  Andreas Scherer  <https://ascherer.github.io>

	* cwebmac.tex,
	* texinputs/pdfctwimac.tex: Fix NOS section.

2023-05-14  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-{mac,mini,ql,w2c}.ch,
	* comm-w2c.h,
	* common.h,
	* common.w,
	* ctang-{bs,pc,ql,vms,w2c,w32}.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-{mini,w2c}.ch,
	* cweav-{bs,pc,ql,vms,w2c,w32}.ch,
	* cweave.w,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* po/cweb-tl.pot,
	* po/cweb.pot,
	* po/de/cweb-tl.po,
	* po/de/cweb.po,
	* po/it/cweb.po,
	* prod-{cweave,ctwill}.w,
	* prod.w,
	* texinputs/dcwebmac.tex,
	* texinputs/pdfctwimac.tex: CWEB 4.9 release.

2023-05-14  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch,
	* ctwill-w2c.ch: Reshuffle fix for CTWILL;
	permit '$' in C identifiers (from ctangle.w);
	extend 'ministring_buf' for 'mmotype.{w,ch}' (MMIX);
	add lost footnote (due to \unvbox255 in ctwimac.tex);
	adjust manual section references.

2023-05-13  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w: Omit thin space in inner TeX mode.

2023-04-20  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w: Reduce whitespace in output section.

2023-04-05  Andreas Scherer  <https://ascherer.github.io>
